--- a/android/Sara/app/build.gradle
+++ b/android/Sara/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // lifecycle
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
     // Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.44.2'
@@ -63,6 +63,7 @@ dependencies {
     // Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
