[로그인] UI+기능 완성
스플래쉬 모션레이아웃만 추가하면됨

--- a/android/Sara/.gitignore
+++ b/android/Sara/.gitignore
@@ -19,4 +19,5 @@ app/libs/
 build
 app/build/
 
-app/src/main/java/com/xten/sara/util/API_KEY.kt
+app/src/main/java/com/xten/sara/util/constants/API_KEY.kt
+app/client_secret.json
