--- a/android/Sara/app/src/main/AndroidManifest.xml
+++ b/android/Sara/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <queries>
         <intent>
@@ -26,6 +26,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sara"
         android:usesCleartextTraffic="true"
+        android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
