--- a/android/Sara/app/build.gradle
+++ b/android/Sara/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     // GoogleLogin
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
+    // Lottie
+    implementation "com.airbnb.android:lottie:3.4.0"
+
 }
